--- a/package.json
+++ b/package.json
@@ -10,14 +10,24 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/node": "18.11.18",
+    "@types/nprogress": "^0.2.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "cheerio": "^1.0.0-rc.12",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
   }
 }
